--- a/.htaccess
+++ b/.htaccess
@@ -1,21 +1,5 @@
-#Options +SymLinksIfOwnerMatch
-#RewriteEngine On
-
-# Allow Installatron requests
-#RewriteCond %{REQUEST_FILENAME} deleteme\.\w+\.php
-#RewriteRule (.*) - [L] 
-
-#RewriteRule ^ index.php [L]
-Options +SymLinksIfOwnerMatch
-RewriteEngine On
-
-RewriteCond %{REQUEST_URI} !^/public/ 
-
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-
-
-
-RewriteRule ^(.*)$ /public/$1 
-#RewriteRule ^ index.php [L]
-RewriteRule ^(/)?$ public/index.php [L] 
+<IfModule mod_rewrite.c>
+RewriteEngine on
+RewriteCond %{REQUEST_URI} !^public
+RewriteRule ^(.*)$ public/%1 [L]
+</IfModule>
